--- a/style.css
+++ b/style.css
@@ -13,28 +13,40 @@ html,body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+.container-row{
+	display: flex;
+}
 .container{
-    width: 400px;
+    width: 380px;
     margin: 10vh auto 0 auto;
     border: 24px;
+		padding: 12px;
     overflow: hidden;
     border-radius: 25px;
     background-color:#2f3541; 
+		display: flex;
+		flex-direction: column;
 }
 .display{
     height: 130px;
     background-color: #2f3541;
     display: flex;
 }
-.buttons{
-    background-color:#2f3541;
-    display: grid;
-    border-bottom: 1px solid #999;
-    border-left: 1px solid #999;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    background-color: rgba(24,32,42,255);
-    padding-left: 13px;
-    padding-right: 13px;
+.container-column{
+	display: flex;
+	flex-direction: column;
+}
+.container-column-buttons-top{
+	display: flex;
+}
+.container-column-buttons-bottom{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+.container-row-right-buttons{
+    display: flex;
+		flex-direction: column;
 }
 .button{
     background-color: #333b48;
@@ -44,17 +56,19 @@ html,body {
     color: #fff;
     width: 75px;
     height: 75px;
-    margin: 10px 10px 10px 10px;
+    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: none;
+    transition: background-color 0.3s, scale 0.3s;
     
 }
 .button:hover{
-    background-color: rgba(51,59,72,255);
-    transition: background-color 0.3s color ;
+    background-color: #606d85;
+
+    scale: 1.05;
 }
 img{
     height: 25px;
@@ -66,7 +80,7 @@ img{
 }
 .button-orange:hover{
     background-color: orange;
-    scale: 1.1;
+    scale: 1.05;
 }
 .button-lightgray{
     background-color: #4a5664;
@@ -74,7 +88,7 @@ img{
 }
 .button-lightgray:hover{
     background-color: #4a5664;
-    scale:1.1;
+    scale: 1.05;
 }
 .input{
     width: calc(100% - 32px);
@@ -93,21 +107,9 @@ img{
     height: 130px;
     color: black;
 }
-.dol{
-    background-color:#2f3541;
-    display: grid;
-    border-bottom: 1px solid #999;
-    border-left: 1px solid #999;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    background-color: rgba(24,32,42,255);
-    padding-bottom: 50px;
-    padding-left: 13px;
-    padding-right: 13px;
-    margin: 0px;
-}
 .button-wiekszy{
     width: 170px;
 }
-#ikonki{
-    display: none;
+.input-icon{
+	display: none;
 }
