--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html,body {
 		flex-direction: column;
 }
 .display{
-    height: 130px;
+    height: 160px;
     background-color: #2f3541;
     display: flex;
 }
@@ -71,8 +71,9 @@ html,body {
     scale: 1.05;
 }
 img{
-    height: 25px;
-    width: 25px;
+     /* width: 50%; */
+    height: 50%; 
+    object-fit: contain;
 }
 .button-orange{
     background-color: orange;
@@ -90,22 +91,39 @@ img{
     background-color: #4a5664;
     scale: 1.05;
 }
+.actions{
+    display: grid;
+    height: 130px;
+}
 .input{
     width: calc(100% - 32px);
     padding: 0;
     border: unset;
-    margin: 16px;
-    height: 114px;
+    margin: 10px 16px 10px 16px;
+    height: 70px;
     font-size: 80px;
     background-color: transparent;
     outline: unset;
 }
+.previous-action{
+    width: calc(100% - 32px);
+    padding: 0;
+    height: 50px;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 10px;
+    font-size: 40px;
+}
 #wyswietl{
+    display: flex;
+    justify-content: center;
     text-align: center;
-    font-size: 150px;
-    width: 200px;
-    height: 130px;
     color: black;
+    margin: 30px 16px 0px 0px
+}
+#wyswietl img {
+    width: 50px;
+    height: 50px;
 }
 .button-wiekszy{
     width: 170px;
